style/styles.css
body {
    background-color: #D5E1EF;
}

section {
    width: 320px;
    height: 497px;
    background: #FFFFFF;
    box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518);
    border-radius: 20px;
    margin: 10% auto;
    overflow: hidden;
    padding: 16px;
    text-align: center;
}

h1 {
    /* Heading */
    font-family: 'Outfit';
    font-style: normal;
    font-weight: 700;
    font-size: 22px;
    line-height: 28px;
    text-align: center;
}

p {
    font-family: 'Outfit';
    font-style: normal;
    font-weight: 400;
    font-size: 15px;
    line-height: 19px;
    text-align: center;
    letter-spacing: 0.1875px;
    color: #7D889E;
}

img {
    max-width: 100%;
    border-radius: 10px;
}

